user can now view their profile and update their pin, also fixed minor bugs

--- a/signup.html
+++ b/signup.html
@@ -102,7 +102,7 @@
             <input class="pl-2 outline-none border-none" type="text" name="pin" id="" placeholder="Pin" />
           </div>
           <div class="">Already have an Account? <a href="/login.html" class="text-blue-600 hover:text-blue-500 hover:underline">Login</a></div>
-          <button type="submit" class="block w-full bg-blue-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2"><span class="h-6 w-6 border-4 border-white border-t-blue-600 rounded-full animate-spin hidden" id="loader"></span> <span>Sign up</span></button>
+          <button type="submit" id="signupBtn" class="block w-full bg-blue-600 mt-4 py-2 rounded-2xl text-white font-semibold mb-2"><span class="h-6 w-6 border-4 border-white border-t-blue-600 rounded-full animate-spin hidden" id="signupLoader"></span> <span>Sign up</span></button>
         </form>
       </div>
     </div>
