--- a/login.html
+++ b/login.html
@@ -35,7 +35,7 @@
                                 <p>Don't have an Account? <a href="/signup.html" class="text-blue-600 hover:text-blue-300 hover:underline">Sign up</a></p>
                             </div>
                             <div class="relative">
-                                <button class="bg-blue-500 text-white rounded-md px-5 py-2 hover:scale-105"><span class="h-6 w-6 border-4 border-white border-t-blue-600 rounded-full animate-spin hidden" id="loader"></span> <span>Login</span></button>
+                                <button type="submit" id="loginBtn" class="bg-blue-500 text-white rounded-md px-5 py-2 hover:scale-105"><span class="h-6 w-6 border-4 border-white border-t-blue-600 rounded-full animate-spin hidden" id="loginLoader"></span> <span>Login</span></button>
                             </div>
                             <div class="flex justify-end">
                                 <a href="/resetPwsrd.html" class="text-blue-600 hover:text-blue-300 hover:underline">Forgot password?</a>
