fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               >
             </li>
           </ul>
-          <a href="/signup.html" class="block align-middle transform perspective-1 hover:animate-wobble-horizontal shadow-2xl p-3 border border-blue-950 md:border-white text-blue-950 md:text-white mx-auto text-lg md:text-base">
+          <a href="signup.html" class="block align-middle transform perspective-1 hover:animate-wobble-horizontal shadow-2xl p-3 border border-blue-950 md:border-white text-blue-950 md:text-white mx-auto text-lg md:text-base">
             Dashboard
           </a>
         </nav>
@@ -126,7 +126,7 @@
             We help SME’s take creadit easily for their business so that they
             grow and remain sustainable
           </p>
-          <a href="/signup.html" class="inline-block align-middle transform perspective-1 animate-slide-up hover:animate-wobble-horizontal shadow-2xl text-blue-500 bg-white py-3 px-6 rounded-md">
+          <a href="signup.html" class="inline-block align-middle transform perspective-1 animate-slide-up hover:animate-wobble-horizontal shadow-2xl text-blue-500 bg-white py-3 px-6 rounded-md">
             Apply for Credit
           </a>
         </div>
@@ -200,7 +200,7 @@
                   >Your search for Credit ends with us.</span
                 >
               </h1>
-              <a href="/signup.html" class="inline-block align-middle transform perspective-1 animate-slide-up hover:animate-wobble-horizontal shadow-2xl text-white bg-blue-500 py-3 px-6 rounded-md">
+              <a href="signup.html" class="inline-block align-middle transform perspective-1 animate-slide-up hover:animate-wobble-horizontal shadow-2xl text-white bg-blue-500 py-3 px-6 rounded-md">
                 Apply Now
               </a>
             </div>
