--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
                             </div>
 
                             <div class="">
-                                <p>Don't have an Account? <a href="/signup.html" class="text-blue-600 hover:text-blue-300 hover:underline">Sign up</a></p>
+                                <p>Don't have an Account? <a href="signup.html" class="text-blue-600 hover:text-blue-300 hover:underline">Sign up</a></p>
                             </div>
                             <div class="relative">
                                 <button type="submit" id="loginBtn" class="bg-blue-500 text-white rounded-md px-5 py-2 hover:scale-105"><span class="h-6 w-6 border-4 border-white border-t-blue-600 rounded-full animate-spin hidden" id="loginLoader"></span> <span>Login</span></button>
