fixed minor bugs

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,6 @@
     <script defer src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
-    <script defer src="./dist/dashboard.bundle.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./src/input.css" rel="stylesheet" />
     <style>
@@ -455,5 +454,6 @@
         document.getElementById(containerId).classList.remove("hidden");
       }
     </script>
+    <script src="./dist/dashboard.bundle.js"></script>
   </body>
 </html>
