--- a/resetPwsrd.html
+++ b/resetPwsrd.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="dist/resetPwsrd.bundle.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
@@ -45,5 +44,8 @@
         </div>
       </div>
     </main>
+
+    <script src="dist/resetPwsrd.bundle.js"></script>
+
   </body>
 </html>
