--- a/signup.html
+++ b/signup.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script defer src="dist/signup.bundle.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
       @layer utilities {
@@ -106,5 +105,9 @@
         </form>
       </div>
     </div>
+
+    <script src="dist/signup.bundle.js"></script>
+
   </body>
+  
 </html>
