--- a/login.html
+++ b/login.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="dist/login.bundle.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -46,5 +45,7 @@
             </div>
         </div>
     </div>
+
+    <script src="dist/login.bundle.js"></script>
 </body>
 </html>
