"Updated resetPwsrd.html with additional CSS class, removed vercel.json file"

--- a/resetPwsrd.html
+++ b/resetPwsrd.html
@@ -28,7 +28,7 @@
                       type="email"
                       id="email"
                       name="email"
-                      class="py-3 px-4 block w-full border-2 border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 shadow-sm"
+                      class="py-3 px-4 block w-full border-2 border-gray-200 rounded-md text-sm focus:border-blue-500 focus:ring-blue-500 shadow-sm text-[18px]"
                       required
                       aria-describedby="email-error"
                     />
