fixed minor bugs

--- a/dashboard.html
+++ b/dashboard.html
@@ -454,6 +454,6 @@
         document.getElementById(containerId).classList.remove("hidden");
       }
     </script>
-    <script src="./dist/dashboard.bundle.js"></script>
+    <script type="module" src="./dist/dashboard.bundle.js"></script>
   </body>
 </html>
