--- a/login.html
+++ b/login.html
@@ -46,6 +46,6 @@
         </div>
     </div>
 
-    <script src="dist/login.bundle.js"></script>
+    <script type="module"  src="dist/login.bundle.js"></script>
 </body>
 </html>
