--- a/signup.html
+++ b/signup.html
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <script src="dist/signup.bundle.js"></script>
+    <script type="module"  src="dist/signup.bundle.js"></script>
 
   </body>
   
