--- a/resetPwsrd.html
+++ b/resetPwsrd.html
@@ -45,7 +45,7 @@
       </div>
     </main>
 
-    <script src="dist/resetPwsrd.bundle.js"></script>
+    <script type="module"  src="dist/resetPwsrd.bundle.js"></script>
 
   </body>
 </html>
