fixed minor bugs

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
       </section>
     </main>
 
-    <script>
+    <!-- <script>
       const navBtn = document.getElementById("nav-btn");
       const navi = document.querySelector(".navi");
       const firstStroke = document.querySelector(".first-stroke");
@@ -251,6 +251,7 @@
         secondStroke.classList.toggle("active");
         navi.classList.toggle("full");
       });
-    </script>
+    </script> -->
+     <script src="dist/index.bundle.js"></script>
   </body>
 </html>
